--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@3rdweb/hooks": "^1.9.2",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
