posting data from metamask to sanity

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@3rdweb/hooks": "^1.8.0",
     "@3rdweb/sdk": "^1.42.1",
+    "@sanity/client": "^3.3.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
